--- a/styles.css
+++ b/styles.css
@@ -48,16 +48,18 @@ body {
 
 .search-bar {
   padding: 5px 20px;
+  display: flex;
 }
 
 .search-bar input {
   border: 2px solid black;
+  padding: 2px 10px;
   height: 30px;
   width: 300px;
   font-size: 15px;
 }
 
-.search-bar button {
+.btn {
   background-color: rgb(51, 49, 49);
   color: white;
   width: fit-content;
@@ -67,7 +69,7 @@ body {
   font-size: 15px;
 }
 
-.search-bar button:hover {
+.btn:hover {
   background-color: rgb(163, 232, 117);
   color: rgb(52, 50, 50);
   cursor: pointer;
@@ -136,4 +138,23 @@ body {
   display: grid;
   align-items: center;
   gap: 2px;
+}
+
+.shimmer-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  height: 350px;
+  width: 230px;
+  background-color: rgb(206, 206, 206);
+  border-radius: 20px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.shimmer {
+  background-color: rgb(206, 206, 206);
 }
