--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,10 @@ body {
   width: 230px;
 }
 
+.res-card :hover {
+  cursor: pointer;
+}
+
 .res-name,
 .res-logo,
 .res-rating,
@@ -157,4 +161,10 @@ body {
 
 .shimmer {
   background-color: rgb(206, 206, 206);
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
