Added Tailwind css to the project and made it more beautiful

--- a/styles.css
+++ b/styles.css
@@ -1,170 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
-* {
-  padding: 0;
-  border: 0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-  padding: 0;
-  bottom: 0;
-  margin: 0;
-}
-
-.app {
-  margin: 0 auto;
-  width: 85%;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  font-size: 17px;
-  padding: 0 10px;
-  margin-bottom: 15px;
-  background-color: rgb(209, 241, 215);
-  font-family: "Lato", sans-serif;
-}
-
-.nav-items ul {
-  list-style-type: none;
-  display: flex;
-}
-
-.list-item {
-  padding: 10px;
-}
-
-.logo {
-  margin: auto 0;
-}
-
-.body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Ubuntu", sans-serif;
-}
-
-.search-bar {
-  padding: 5px 20px;
-  display: flex;
-}
-
-.search-bar input {
-  border: 2px solid black;
-  padding: 2px 10px;
-  height: 30px;
-  width: 300px;
-  font-size: 15px;
-}
-
-.btn {
-  background-color: rgb(51, 49, 49);
-  color: white;
-  width: fit-content;
-  padding: 10px;
-  border-radius: 10px;
-  margin: 10px;
-  font-size: 15px;
-}
-
-.btn:hover {
-  background-color: rgb(163, 232, 117);
-  color: rgb(52, 50, 50);
-  cursor: pointer;
-}
-
-.res-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.res-card {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-  border-radius: 20px;
-  padding: 5px;
-  margin: 5px;
-  align-items: center;
-  justify-content: center;
-  width: 230px;
-}
-
-.res-card :hover {
-  cursor: pointer;
-}
-
-.res-name,
-.res-logo,
-.res-rating,
-.res-eta,
-.res-desc {
-  padding: 0;
-  border: 0;
-  margin: 10px;
-}
-
-.res-name {
-  font-size: 22px;
-}
-
-.res-rating {
-  font-size: 15px;
-}
-
-.res-logo {
-  height: 150px;
-  width: 200px;
-  border-radius: 20px;
-}
-
-.res-cuisines,
-.res-area {
-  -webkit-font-smoothing: antialiased;
-  font-family: Basis_Grotesque_Pro;
-  font-weight: 200;
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: -0.3px;
-  color: rgba(2, 6, 12, 0.6);
-  overflow: hidden;
-  width: 100%;
-  display: -webkit-box;
-  overflow-wrap: break-word;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-}
-
-.res-desc {
-  display: grid;
-  align-items: center;
-  gap: 2px;
-}
-
-.shimmer-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  height: 350px;
-  width: 230px;
-  background-color: rgb(206, 206, 206);
-  border-radius: 20px;
-  padding: 5px;
-  margin: 5px;
-}
-
-.shimmer {
-  background-color: rgb(206, 206, 206);
-}
-
-.center {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.rupee::before {
+  content: "\20B9";
 }
